# AndroidAudioRecoder

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEncoder.cpp  CMakeLists.txt  androidaudiorecoder.cpp  audio_encoder.cpp  audio_encoder.h  com_example_androidaudiorecoder_AudioEncoder.h
app/src/main/java/com/example/androidaudiorecoder/: AssectsUtil.java  AudioConfigurationException.java  AudioEncoder.java  AudioRecordRecorderService.java  MainActivity.java  StartRecordingException.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
